--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>example1</title>
+    <style>
+      html, body {
+        height:100%;
+        padding:0;
+        margin:0;
+      }
+    </style>
   </head>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.5.1/pixi.min.js"></script>
+  
+  
   <body>
     <script src="/dist/build.js"></script>
   </body>
