--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   
   
   <body>
-    <script src="/dist/build.js"></script>
+    <script src="/dist/vendor.js"></script>
+    <script src="/dist/main.js"></script>
+    <!-- <script src="/dist/build.js"></script> -->
   </body>
 </html>
