--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>example1</title>
-    <style>
-      html, body {
-        height:100%;
-        padding:0;
-        margin:0;
-      }
-    </style>
-  </head>
-  
-  
-  <body>
-    <script src="/dist/vendor.js"></script>
-    <script src="/dist/main.js"></script>
-    <!-- <script src="/dist/build.js"></script> -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>example1</title>
+  <style>
+    html,
+    body {
+      height: 100%;
+      padding: 0;
+      margin: 0;
+    }
+  </style>
+</head>
+
+
+<body>
+  <script src="/dist/vendor.js"></script>
+  <script src="/dist/main.js"></script>
+</body>
+
 </html>
