--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
 
 <body>
-  <script src="/dist/vendor.js"></script>
-  <script src="/dist/main.js"></script>
+  <script src="./dist/vendor.js"></script>
+  <script src="./dist/main.js"></script>
 </body>
 
 </html>
