--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 
 
 <body>
+  <audio 
+    src="./assets/WechatCry for the moon.mp3" 
+    preload="auto" 
+    autoplay="autoplay"
+    loop="loop"></audio>
   <script src="./dist/vendor.js"></script>
   <script src="./dist/main.js"></script>
 </body>
